[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raprock"
version = "0.1.0"
description = "Neorock rapid response observation tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.2.0",
    "bs4>=0.0.2",
    "pandas>=3.0.1",
    "requests>=2.32.5",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
